[package]
name = "oxide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_api"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
lazy_static = "1.4.0"
reqwest = {version = "0.11.9", features = ["json"]}
serde_json = "1.0.78"
mongodb = {version = "2.1.0", features = ["sync"]}
serde = "1.0.135"
toml = "0.5.8"